[package]
name = "first_rust"
version = "0.1.0"
authors = ["mateuszmmi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.2.0"

[dependencies.gtk]
version = "0.14.1"
features = ["v3_24"]